overflow clip scroll fix

--- a/src/globals.css
+++ b/src/globals.css
@@ -20,7 +20,7 @@ body {
   min-width: 100%;
   min-height: 100%;
   overscroll-behavior: none;
-  overflow: overlay;
+  overflow: clip;
   color-scheme: dark;
   @apply font-sans text-gray-300;
 }
